# pocmudp

./: .gitignore  LICENSE  README.md  hscope.out  pocmudp.cabal
client/: Main.hs
server/: Main.hs
src/Network/: MUDP.hs  POC.hs
src/Network/MUDP/: Codec.hs  Context.hs  Internal.hs  Manager.hs  Session.hs  Types.hs
src/Network/POC/: Codec.hs  Internal.hs  Manager.hs  Types.hs  Utils.hs
test/: CodecSpec.hs  Spec.hs
