name:                pocmudp
version:             0.2.0.0
-- synopsis:
-- description:
homepage:            https://github.com/keizo042/pocmudp#readme
license:             BSD3
license-file:        LICENSE
author:              Koichi Nakanishi
maintainer:          keizo.bookman@gmail.com
copyright:           2017 Koichi Nakanishi
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.MUDP
                       Network.MUDP.Codec
                       Network.MUDP.Types
                       Network.MUDP.Internal
                       Network.MUDP.Context
                       Network.MUDP.Session
                       Network.MUDP.Manager
  build-depends:       base >= 4.7 && < 5
                     , network
                     , bytestring
                     , containers
                     , cereal
  default-language:    Haskell2010


executable client
  hs-source-dirs:      client
  main-is:             Main.hs
  ghc-options:         -threaded  -Wall
  build-depends:       base
                      ,pocmudp
                      ,bytestring
  default-language:   Haskell2010

executable server
  hs-source-dirs:      server
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pocmudp
                     , bytestring
  default-language:    Haskell2010

test-suite pocmudp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  exposed-module:      CodecSpec
  build-depends:       base
                     , network
                     , bytestring
                     , containers
                     , cereal
                     , hspec
                     , pocmudp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             doctest.hs
  build-depends:       base
                      ,doctest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/keizo042/pocmudp
